--- a/project.ipynb
+++ b/project.ipynb
@@ -1,6 +1,19 @@
 {
  "cells": [
   {
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": [
+    "Useful links:\n",
+    "\n",
+    "https://medium.com/@imabhi1216/fine-tuning-a-vision-transformer-vit-model-with-a-custom-dataset-37840e4e9268#f0a3\n",
+    "\n",
+    "https://www.kaggle.com/code/luthei/vit-vs-cnn-on-wikiart/notebook#3.2-Test-Accuracy\n",
+    "\n"
+   ],
+   "id": "4be94cc113e1617a"
+  },
+  {
    "cell_type": "code",
    "id": "69b84c5b",
    "metadata": {
