updated model to support multi label prediction

--- a/project.ipynb
+++ b/project.ipynb
@@ -763,7 +763,7 @@
     "        loss_fct = nn.CrossEntropyLoss()\n",
     "        genre_loss = loss_fct(genre_logits, genre_labels)\n",
     "        style_loss = loss_fct(style_logits, style_labels)\n",
-    "        loss = genre_loss + style_loss  # This is a scalar tensor\n",
+    "        loss = genre_loss + style_loss \n",
     "        if return_outputs:\n",
     "            outputs = (genre_logits, style_logits)\n",
     "            return loss, outputs\n",
@@ -794,9 +794,9 @@
     "\n",
     "        return (\n",
     "            loss.detach(),\n",
-    "            (genre_logits.detach(), style_logits.detach()),  # Keep as tensors, don't convert to numpy\n",
+    "            (genre_logits.detach(), style_logits.detach()),\n",
     "            {\"genre_labels\": genre_labels.detach(),\n",
-    "             \"style_labels\": style_labels.detach()}  # Keep as tensors\n",
+    "             \"style_labels\": style_labels.detach()}\n",
     "        )"
    ],
    "outputs": [],
